@@ -7,7 +7,7 @@
  *      implementation of the pqxx::connection_base abstract base class.
  *   pqxx::connection_base encapsulates a frontend to backend connection
  *
- * Copyright (c) 2001-2009, Jeroen T. Vermeulen <jtv@xs4all.nl>
+ * Copyright (c) 2001-2010, Jeroen T. Vermeulen <jtv@xs4all.nl>
  *
  * See COPYING for copyright license.  If you did not receive a file called
  * COPYING with this source code, please notify the distributor of this mistake,
@@ -1503,9 +1503,7 @@ string pqxx::connection_base::esc_raw(const unsigned char str[], size_t len)
 
 string pqxx::connection_base::quote_raw(const unsigned char str[], size_t len)
 {
-  // Since 8.2, postgres prefers E'escape strings' for bytea.
-  const string prefix((server_version() >= 80200) ? "E'" : "'");
-  return prefix + esc_raw(str, len) + "'::bytea";
+  return "'" + esc_raw(str, len) + "'::bytea";
 }
 
 
