@@ -1,3 +1,6 @@
+2010-10-30  Jeroen T. Vermeulen <jtv@xs4all.nl>
+ src/connection_base.cxx:
+ - Quote bytea as '', not E''.  Thanks RhodiumToad.
 2010-10-26  Jeroen T. Vermeulen <jtv@xs4all.nl>
  win32/INSTALL.txt, win32/mingw.mak.template, win32/vc-libpqxx.mak.template,
  win32/vc-test.mak.template:
